RESOLVED FIXED279722
[-webkit-line-clamp] Fix css-overflow/line-clamp/webkit-line-clamp-026.html
https://bugs.webkit.org/show_bug.cgi?id=279722
Summary [-webkit-line-clamp] Fix css-overflow/line-clamp/webkit-line-clamp-026.html
alan
Reported 2024-09-14 18:51:43 PDT
ssia
Attachments
[fast-cq]Patch (2.79 KB, patch)
2024-09-14 18:53 PDT, alan
no flags
alan
Comment 1 2024-09-14 18:53:31 PDT
Created attachment 472562 [details] [fast-cq]Patch
EWS
Comment 2 2024-09-15 10:24:03 PDT
Committed 283683@main (ceaecdcdf9da): <https://commits.webkit.org/283683@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472562 [details].
Radar WebKit Bug Importer
Comment 3 2024-09-15 10:25:13 PDT
Note You need to log in before you can comment on or make changes to this bug.