[-webkit-line-clamp] Fix css-overflow/line-clamp/webkit-line-clamp-026.html https://bugs.webkit.org/show_bug.cgi?id=279722

Reviewed by Antti Koivisto.

'-webkit-box-orient: horizontal' does not support legacy line clamp.

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/RenderDeprecatedFlexibleBox.cpp:
(WebCore::RenderDeprecatedFlexibleBox::styleWillChange):

Canonical link: https://commits.webkit.org/283683@main